<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Text used trough out the app -->
    <string name="app_name">Sportti</string>
    <string name="channel_name">Exercise</string>
    <string name="channel_description">Exercise recording is active</string>

    <!--NewRecordExerciseActivity constants -->
    <string name="new_exercise">New exercise</string>
    <string name="record_timer_duration">Duration</string>
    <string name="button_text_continue">Continue</string>
    <string name="button_text_start">Start</string>
    <string name="button_text_stop">Stop</string>
    <string name="button_text_end">End</string>
    <string name="button_text_reset">Reset</string>
    <string name="button_text_resume">Resume</string>
    <string name="button_text_save">Save</string>
    <string name="place_holder_time">00:00:00</string>
    <string name="place_holder_exercise_name">Exercise name loading&#8230;</string>
    <string name="comment_your_exercise">How was the exercise?</string>
    <string name="comment">Comment:</string>
    <string name="save_exercise">Save exercise</string>
    <string name="delete">Delete</string>
    <string name="pop_up_placeholder">Placeholder</string>

    <!-- Record exercise -->
    <string name="recordexercise_switch_text">Save route</string>
    <string name="toast_location_services_not_enabled">Route cannot be saved because location services are disabled.</string>

    <!-- History page -->
    <string name="history_days">Days</string>
    <string name="history_months">Months</string>
    <string name="history_old_exercises">Exercises</string>
    <string name="button_open_map">Open map</string>

    <!-- Exercise details page -->
    <string name="exercisedetails_sport_default_value">Sport</string>
    <string name="exercisedetails_start_date">Start:</string>
    <string name="exercisedetails_duration">Duration:</string>
    <string name="exercisedetails_calories">Calories:</string>
    <string name="exercisedetails_length">Length:</string>
    <string name="exercisedetails_pulse">Average pulse:</string>
    <string name="exercisedetails_comment">Comment:</string>
    <string name="exercisedetails_delete_exercise">Delete exercise</string>

    <!-- Location tracking notification texts -->
    <string name="notification_location_tracking_title">Sportti</string>
    <string name="notification_location_tracking_on_message">Tracking location</string>

    <!-- Custom graph -->
    <string name="customgraph_y_axis_name">Hours</string>

    <!-- Text for maps -->
    <string name="map_start_marker">Start</string>
    <string name="map_end_marker">End</string>

    <!-- Text for new exercise activity -->
    <string name="new_exercise_button_pulse">Average pulse</string>
    <string name="new_exercise_button_calories">Calories</string>
    <string name="new_exercise_button_distance">Give distance</string>
    <string name="new_exercise_button_duration">Select duration</string>
    <string name="new_exercise_exercise_type_text">Exercise type:</string>
    <string name="new_exercise_comment_here">Comment here:</string>

    <!--Permissions -->
    <string name="permission_denied">Permission denied!</string>
    <string name="informative_message_for_permissions">"Sportti needs this permission to display exercise routes on map.\n\nAre you sure you want to deny this permission?"</string>
    <string name="required_permission_denied_message">"Permission required to display map was denied.\nYou can change this in phone's settings"</string>
    <string name="map_not_available">Map is not available</string>

    <!-- Text for duration pop up -->
    <string name="duration_pop_up_tittle_text">Give duration</string>
    <string name="duration_pop_up_duration_default">00h 00m</string>

    <!-- Text for distance pop up -->
    <string name="distance_pop_up_title_text">Give distance</string>
    <string name="distance_pop_up_minus_10">-10</string>
    <string name="distance_pop_up_minus_100">-100</string>
    <string name="distance_pop_up_minus_1000">-1000</string>
    <string name="distance_pop_up_plus_10">+10</string>
    <string name="distance_pop_up_plus_1000">+1000</string>
    <string name="distance_pop_up_plus_100">+100</string>
    <string name="distance_pop_up_distance_default">00000m</string>

    <!-- Text for calories pop up -->
    <string name="calories_pop_up_calories_default">0000kcal</string>
    <string name="calories_pop_up_plus_1">+1</string>
    <string name="calories_pop_up_minus_1">-1</string>
    <string name="calories_pop_up_tittle_text">Give calories</string>
    <string name="calories_pop_up_minus_10">-10</string>
    <string name="calories_pop_up_plus_10">+10</string>
    <string name="calories_pop_up_plus_100">+100</string>
    <string name="calories_pop_up_minus_100">-100</string>

    <!-- Text for pulse pop up -->
    <string name="pulse_pop_up_give_average_pulse">Give average pulse</string>
    <string name="pulse_pop_up_pulse_default">000bpm</string>
    <string name="pulse_pop_up_plus_ten">+10</string>
    <string name="pulse_pop_up_plus_100">+100</string>
    <string name="pulse_pop_up_plus_1">+1</string>
    <string name="pulse_pop_up_minus_10">-10</string>
    <string name="pulse_pop_up_minus_1">-1</string>
    <string name="pulse_pop_up_minus_100">-100</string>

    <!-- Text for exercise pop up -->
    <string name="exercise_pop_up_button_start_recording">Start recording</string>
    <string name="exercise_pop_up_button_save_exercise">Save Exercise</string>

    <!-- Text for save exercise activity -->
    <string name="save_exercise_activity_button_select_start_time">Select start time</string>
    <string name="save_exercise_activity_button_save_exercise">Save exercise</string>

    <!-- What is this for?! -->
    <string name="button_text_profile">Profile</string>

    <!-- User profile -->
    <string name="user_change_name">Enter your name</string>
    <string name="user_change_birthday">Your birthday</string>
    <string name="user_change_gender">Choose your gender</string>
    <string name="user_change_weight">Choose your weight</string>
    <string name="user_change_height">Choose your height</string>
    <string name="user_set_up_birthday">Choose the date of your birthday</string>
    <string name="user_heart_rate_max">Your max hear rate: </string>
    <string name="user_heart_rate_min">Your min hear rate: </string>
    <string name="user_weekly_goal">Your weekly goal: </string>

    <!-- text for profile activity pop up -->
    <string name="choose_the_date_of_your_birthday_text">Choose the date of your birthday</string>
    <string name="user_set_heart_rate_max">Set your maximum heart rate</string>
    <string name="user_set_heart_rate_min">Set your minimum heart rate</string>
    <string name="user_set_weekly_goal">Set your weekly goal</string>
    <string name="user_set_weight">Set your weight</string>
    <string name="user_set_height">Set your height</string>
    <string name="choose_your_weight_text">Choose your weight</string>
    <string name="choose_your_height_text">Choose your height</string>
    <string name="user_set_minutes">Minutes</string>
    <string name="user_set_kg">Kilograms</string>
    <string name="user_set_cm">Centimeters</string>
    <string name="user_set_heart">Beats per minute</string>
    <string name="birthday">Birthday</string>

    <!-- ProfileActivity string constants -->
    <string name="profile_activity_username">Username:</string>
    <string name="profile_activity_gender">Gender:</string>
    <string name="profile_activity_weekly_goal_text">Weekly goal:</string>
    <string name="profile_activity_age_text">Age:</string>
    <string name="profile_activity_weight_text">Weight:</string>
    <string name="profile_activity_height_text">Height:</string>
    <string name="profile_activity_rest_heart_rate_text">Rest heart rate:</string>
    <string name="profile_activity_max_heart_rate_text">Max heart rate:</string>
    <string name="profile_activity_estimated_bmr_text">Estimated BMR</string>

    <!-- About Sportti application -->
    <string name="about_sportti">Sportti, application for active people</string>
    <string name="copyright">Copyright (©) Rasmus Hyyppä, Jukka-Pekka Jaakkola, Lassi Bågman, Yana Krylova."</string>
    <string name="about_sportti_definitions">List of definitions and concepts used in the application: "</string>
    <string name="about_sportti_bmr">BMR: Basal Metabolic Rate, estimation of it is done by: Mifflin-St Jeor Equation. "</string>
    <string name="about_sportti_MET">MET: Metabolic equivalent of task, used to calculate calories by standard set value. "</string>
    <string name="about_sportti_vo2max">VO2MAX: Maximal oxygen consumption, for more accurate calorie calculations. "</string>
    <string name="about_sportti_vo2max_heart_rate">VO2MAX will be calculated from the exercises on the application background, after resting- and maximal heart rate are set."</string>
    <string name="about_application">About application</string>

</resources>