<?xml version="1.0" encoding="utf-8"?>
<!--@author Rasmus Hyyppä-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.StartExerciseActivity">

    <TextView
        android:id="@+id/recordexercise_textview_duration_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_timer_duration"
        android:textAlignment="center"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/recordexercise_textview_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/place_holder_time"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/recordexercise_textview_sport_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_holder_exercise_name"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/startexercise_guideline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/recordexercise_switch_track_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:onClick="toggleLocationTracking"
        android:text="@string/recordexercise_switch_text"
        android:textSize="24sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startexercise_guideline_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <Button
            android:id="@+id/recordexercise_button_start_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="recordExerciseButtonPressed"
            android:text="@string/button_text_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/recordexercise_button_reset_timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/startexercise_guideline_bottom"
            app:layout_constraintVertical_bias="0.516" />

        <Button
            android:id="@+id/recordexercise_button_reset_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="recordExerciseButtonPressed"
            android:text="@string/button_text_reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/recordexercise_button_start_exercise"
            app:layout_constraintTop_toTopOf="@+id/startexercise_guideline_bottom"
            app:layout_constraintVertical_bias="0.516" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>