<?xml version="1.0" encoding="utf-8"?>
<!--@author Lassi Bågman-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editTextDateStart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.NewManualExerciseActivity">

    <Button
        android:id="@+id/buttonPulse"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="openGiveAveragePulse"
        android:text="@string/new_exercise_button_pulse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalories" />

    <TextView
        android:id="@+id/textViewPulse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonPulse"
        app:layout_constraintTop_toBottomOf="@+id/textViewCalories" />

    <TextView
        android:id="@+id/textViewCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCalories"
        app:layout_constraintTop_toBottomOf="@+id/textViewDistance" />

    <Button
        android:id="@+id/buttonCalories"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="openGiveCalories"
        android:text="@string/new_exercise_button_calories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDistance" />

    <TextView
        android:id="@+id/textViewDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonDistance"
        app:layout_constraintTop_toBottomOf="@+id/textViewDuration" />

    <Button
        android:id="@+id/buttonDistance"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="openGiveDistance"
        android:text="@string/new_exercise_button_distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDuration" />

    <Spinner
        android:id="@+id/spinnerSelectActivity"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="activityDropDown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewExercise"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/new_exercise_exercise_type_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonStartTime"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:onClick="openSelectStartTime"
        android:text="@string/save_exercise_activity_button_select_start_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewExercise" />

    <Button
        android:id="@+id/buttonDuration"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="openSelectDuration"
        android:text="@string/new_exercise_button_duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartTime" />

    <TextView
        android:id="@+id/textViewStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonStartTime"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSelectActivity"
        app:layout_constraintVertical_bias="0.07
" />

    <TextView
        android:id="@+id/textViewDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonDuration"
        app:layout_constraintTop_toBottomOf="@+id/textViewStartTime" />

    <Button
        android:id="@+id/buttonSaveExercise"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginBottom="32dp"
        android:onClick="onClickSaveExercise"
        android:text="@string/save_exercise_activity_button_save_exercise"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextTextComment"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:ems="10"
        android:hint="@string/new_exercise_comment_here"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLength="255"
        android:textColorHint="#00838F"
        app:layout_constraintBottom_toTopOf="@+id/buttonSaveExercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPulse" />

</androidx.constraintlayout.widget.ConstraintLayout>