<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/user_background">

    <SeekBar
        android:id="@+id/seekBarSelectWeightPopUp"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="300dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSeekBarWeightValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_set_kg"
        app:layout_constraintBottom_toTopOf="@+id/seekBarSelectWeightPopUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewWeeklyTimePopUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/user_set_weight"
        app:layout_constraintBottom_toTopOf="@+id/textViewSeekBarWeightValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonSaveWeightPopUp"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/button_text_save"
        app:layout_constraintBottom_toTopOf="@+id/weight_bottom_guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarSelectWeightPopUp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/weight_bottom_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="132dp" />
</androidx.constraintlayout.widget.ConstraintLayout>